--- a/startup.html
+++ b/startup.html
@@ -11,7 +11,7 @@
 <div class="container d-flex align-items-center h-100">
   <div class="row">
     <header class="text-center col-12">
-      <h1 class="text-uppercase"><strong>THE BIGGEST STARTUP EVENT OF THE YEAR</strong></h1>
+      <h1 class="text-uppercase"><strong>THE BIGGEST STARTUP EVENT OF THE YEAR 2023</strong></h1>
     </header>
     <div class="buffer col-12"></div>
     <section class="text-center col-12 ">
